fix: main banner overflow and slider items amount

--- a/client/src/components/MainPage/components/MainBanner/MainBanner.module.scss
+++ b/client/src/components/MainPage/components/MainBanner/MainBanner.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
   }
   &__content {
     position: absolute;
