--- a/client/src/components/MainPage/components/Slider/Slider.module.scss
+++ b/client/src/components/MainPage/components/Slider/Slider.module.scss
@@ -2,6 +2,7 @@
 
 .slider {
   position: relative;
+  z-index: 2;
   // overflow: hidden;
 
   &__header {
